--- a/index.html
+++ b/index.html
@@ -182,7 +182,7 @@
             <ul>
                 <li>David Bermbach <span class="location">Berlin University of Technology, Germany</span></li>
                 <li>Everton Cavalcante <span class="location">Federal University of Rio Grande do Norte, Brazil</span> </li>
-                <li>Stéphane Delbruel <span class="location">Catholic University of Leuven, Belgium</span></li>
+                <li>Stéphane Delbruel <span class="location">University of Oslo, Norway</span></li>
                 <li>David Eyers <span class="location">University of Otago, New Zealand</span></li>
             </ul>
             <h3>Program Committee</h3>
