Including accepted papers

--- a/index.html
+++ b/index.html
@@ -107,21 +107,20 @@
                 </a>
             </div>
 			
-			<!--
             <h1 id="papers">Accepted Papers</h1>
             <p>
 				<ul>
 					<li>
-						On a Caching System with Object Sharing<br/>
-						<span class="location">Nader Alfares, George Kesidis, Xi Li, Bhuvan Urgaonkar, Mahmut Kandemir (Penn State University, USA), and Takis Konstantopoulos (University of Liverpool, United Kingdom)</span>
+						Towards Low-Effort Development of Advanced IoT Applications<br/>
+						<span class="location">I. Bohé, J. Lapon, M. Willocx, V. Naessens</span>
 					</li>
 					<li>
-						IoT-based Garbage Collecting Management System for Smart Cities<br/>
-						<span class="location">Wanderson Ricardo de Medeiros and Gustavo Girão (Federal University of Rio Grande do Norte, Brazil)</span>
+						RedCASTLE: Practically Applicable k_s-anonymity for IoT Streaming Data at the Edge in Node-RED<br/>
+						<span class="location">F. Pallas, J. Legler, N. Amslgruber, E. Grünewald</span>
 					</li>
 					<li>
-						A Study of Publish/Subscribe Middleware Under Different IoT Traffic Conditions<br/>
-						<span class="location">Zhuangwei Kang, Robert Canady, Abhishek Dubey, Aniruddha Gokhale (Vanderbilt University, USA), Shashank Shekhar, and Matous Sedlacek (Siemens Technology, Germany)</span>
+						Towards Grassroots Peering at the Edge<br/>
+						<span class="location">D. Bermbach, S. Lucia, V. Handziski, A. Wolisz</span>
 					</li>
 				</ul>
 			</p>
@@ -130,7 +129,6 @@
                     <div class="arrow-up"></div>
                 </a>
             </div>
-			-->
 			
             <h1 id="cfp">Scope</h1>
             <p>
