Including information about time

--- a/index.html
+++ b/index.html
@@ -108,6 +108,9 @@
             </div>
 			
             <h1 id="papers">Accepted Papers</h1>
+			<p>
+				Paper presentations are scheduled to December 6, 2021 at 09:00 Eastern Time (ET/GMT-5) and will be held virtually at the <a href="https://zoom.us/">Zoom platform</a>, with access restricted to participants registered in Middleware 2021. For other time zones, see <a href="https://www.timeanddate.com/worldclock/converter.html?iso=20211206T140000&p1=189">timeanddate.com</a>.
+			</p>
             <p>
 				<ul>
 					<li>
