Setting workshop date

--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
             <p style="font-size: 0.75rem;">
                 <span style="font-size: 14px; font-weight: bold">8th International Workshop on Middleware and Applications for the Internet of Things</span>
                 <br />
-                at the <a href="https://middleware-conf.github.io/2021/" target="_blank">22nd ACM/IFIP International Middleware Conference</a> &nbsp;|&nbsp; December 6-10, 2021 - Online
+                at the <a href="https://middleware-conf.github.io/2021/" target="_blank">22nd ACM/IFIP International Middleware Conference</a> &nbsp;|&nbsp; December 6, 2021 - Online
             </p>
         </div>
         <div class="container">
