Setting workshop date

--- a/index.html
+++ b/index.html
@@ -115,15 +115,15 @@
 				<ul>
 					<li>
 						Towards Low-Effort Development of Advanced IoT Applications<br/>
-						<span class="location">I. Bohé, J. Lapon, M. Willocx, V. Naessens</span>
+						<span class="location">Ilse Bohé, Michiel Willocx, Jorn Lapon, and Vincent Naessens (KU Leuven, Ghent, Belgium)</span>
 					</li>
 					<li>
-						RedCASTLE: Practically Applicable k_s-anonymity for IoT Streaming Data at the Edge in Node-RED<br/>
-						<span class="location">F. Pallas, J. Legler, N. Amslgruber, E. Grünewald</span>
+						RedCASTLE: Practically Applicable <em>k<sub>s</sub></em>-anonymity for IoT Streaming Data at the Edge in Node-RED<br/>
+						<span class="location">Frank Pallas, Julian Legler, Niklas Amslgruber, and Elias Grünewald (TU Berlin, Germany)</span>
 					</li>
 					<li>
 						Towards Grassroots Peering at the Edge<br/>
-						<span class="location">D. Bermbach, S. Lucia, V. Handziski, A. Wolisz</span>
+						<span class="location">David Bermbach (TU Berlin &amp; ECDF, Germany), Sergio Lucia (TU Dortmund &amp; ECDF, Germany), Vlado Handziski (Reliable Realtime Radio, Germany), and Adam Wolisz (TU Berlin &amp; ECDF, Germany)</span>
 					</li>
 				</ul>
 			</p>
